--- a/style.css
+++ b/style.css
@@ -61,10 +61,12 @@ section{
     justify-content: space-between;
     padding: 1.5rem 9%;
 }
-
+.nike-logo{
+    width:40px;
+}
 .header .logo{
     font-size: 2.5rem;
-    color:#222;
+    color:#e60000;
     font-weight: bolder;
 }
 .header .logo i{
@@ -103,6 +105,194 @@ section{
 .header #menu-btn{
     display: none;
 }
+
+/*Shopping-cart */
+.shopping-cart {
+    margin-left: 10px;
+    font-size: 1.4rem;
+}
+
+.shopping-cart .sum-prices {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+#sum-prices {
+    padding-left: 5px;
+}
+
+.sum-prices h6 {
+    font-size: 0.9rem;
+}
+
+.shoppingCartButton {
+    cursor: pointer;
+}
+
+.shoppingCartButton:hover,
+.account:hover * {
+    background: #e60000;
+    color: #fff;
+}
+
+.producstOnCart {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+    overflow: hidden;
+    overflow-y: scroll;
+    scroll-behavior: smooth;
+    overscroll-behavior: contain;
+    background-color: #202020;
+    width: 300px;
+    height: 500px;
+    color: #f0f0f0;
+    z-index: 15;
+    position: fixed;
+    top: 20px;
+    right: 0;
+    text-align: center;
+    animation: fade 1s;
+}
+
+.producstOnCart::-webkit-scrollbar {
+    display: none;
+}
+
+@keyframes fade {
+    0% {
+        transform: translateX(100%);
+    }
+    100% {
+        transform: none;
+    }
+}
+
+.producstOnCart::-webkit-scrollbar {
+    width: 0;
+    background: transparent;
+}
+
+.hide {
+    display: none;
+    visibility: none;
+}
+
+.producstOnCart ul {
+    text-align: left;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.producstOnCart .buyItem {
+    border-bottom: #aaa 1px solid;
+    width: 90%;
+    padding: 10px 0;
+    display: flex;
+}
+
+.producstOnCart img {
+    width: 90px;
+}
+
+.producstOnCart .top {
+    display: flex;
+    background-color: #45c78a;
+    text-align: center;
+    padding: 10px 0;
+    position: sticky;
+    top: 0;
+    width: 100%;
+}
+
+.top button {
+    background: transparent;
+    border: none;
+    font-size: 1.5rem;
+    margin-left: 10px;
+    color: #f53c1c;
+    cursor: pointer;
+}
+
+.top button:hover {
+    color: #e40505;
+}
+
+.top h2 {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    margin: 0 auto;
+}
+
+.producstOnCart > .checkout {
+    font-size: 0.9rem;
+    margin: 20px auto;
+    border: none;
+    background-color: #297075;
+    padding: 10px 20px;
+    color: #eee;
+    cursor: pointer;
+}
+
+.overlay {
+    overflow: hidden;
+    display: inline-block;
+    content: "";
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100vw;
+    height: 100vh;
+    z-index: -1;
+    background: rgba(0, 0, 0, 0.5);
+}
+
+.stopScrolling {
+    height: 100vh;
+    overflow: hidden;
+}
+
+.buyItem h3 {
+    margin-bottom: 10px;
+}
+
+.buyItem button {
+    background: transparent;
+    color: #fff;
+    cursor: pointer;
+    font-weight: 900;
+    font-size: 1.2rem;
+    padding: 0 6px;
+    border: none;
+}
+
+.buyItem button:active {
+    color: #96c8cc;
+}
+
+.buyItem > div {
+    padding: 0 20px;
+}
+
+.producstOnCart .empty {
+    justify-self: center;
+    margin: 150px auto;
+}
+
+.price {
+    color: #dd3333;
+    text-align: center;
+    padding: 5px;
+    font-size: 1rem;
+}
+
+
+
 
 /* home */
 .home{
@@ -242,96 +432,265 @@ span{
     padding-block: 45px 25px;
 }
 
-/*shop*/
 
-.shop{
-    color: #eee;
-}
-
-.shop .box-container{
-    display: grid;
-    grid-template-columns: repeat(auto-fit,minmax(25rem,1fr));
-    gap:2rem;
-}
-
-.shop .box-container .box{
-    text-align: center;
-    border: 0.2rem solid rgba(231,153,153);
-    box-shadow: 0 0.5rem 1rem rgba(0,0,0,.1);
-}
-
-.shop .box-container .box:hover .img img{
-    transform: scale(1.1);
-}
-
-.shop .box-container .box:hover .img .icons{
-    transform: translateX(0rem);
-}
-
-.shop .box-container .box .img{
+/** Product **/
+.product-container {
+    max-width: 1600px;
+    margin: auto;
+    width: 88vw;
     position: relative;
+}
+.main-section h3 {
+    font-size: 1.3rem;
+    padding: 50px;
+}
+
+.products {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 10px;
+}
+
+.product {
+    position: relative;
+    text-align: center;
+    height: 400px;
+    border-radius: 5px;
     overflow: hidden;
 }
 
-.shop .box-container .box .img img{
-    height: 20rem;
+.product-under {
+    width: 100%;
+    height: 100%;
 }
 
-.shop .box-container .box .img .icons{
+.product-over {
+    z-index: 10;
     position: absolute;
-    top: 1rem;
-    left: 2rem;
-    transform: translateX(-10rem);
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    display: none;
+    justify-content: center;
+    align-items: center;
+    animation-name: show_top;
+    animation-duration: 1s;
+    backdrop-filter: blur(5px);
+}
+@keyframes show_top {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
 }
 
-.shop .box-container .box .img .icons a{
-    display: block;
-    height: 4rem;
-    width: 4rem;
-    line-height: 3.8rem;
-    font-size: 1.7rem;
-    color: #e60000;
-    background: #fff;
-    border-radius: 0.2rem solid #222;
-    margin-top: 1rem;
-    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
+.product-image:hover .product-over {
+    display: flex;
+    flex-direction: column;
 }
 
-.shop .box-container .box .img .icons a:hover{
-    color: #fff;
-    background: #222;
+.product-image {
+    position: relative;
+    height: 62%;
+    background-color: #eee;
 }
 
-.shop .box-container .box .content{
-    padding: 2rem;
+.product-image img {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    width: 70%;
 }
 
-.shop .box-container .box .content h3{
+.product-summary {
     font-size: 2rem;
-    color: #222;
-    padding-bottom: 0.5rem;
-    font-weight: normal;
+    position: relative;
+    padding: 10px 5px;
+    height: 38%;
+    
+}
+.productName {
+    margin: 10px 0 10px 0;
 }
 
-.shop .box-container .box .content .price{
+.product-summary > .price {
     font-size: 2rem;
     font-weight: bolder;
     color: #e60000;
+    position: relative;
 }
 
-.shop .box-container .box .content .price span{
-    color: gray;
-    font-size: 1.6rem;
-    text-decoration: line-through;
+.stars {
+    position: relative;
+    width: 90px;
+    height: 28px;
+    display: block;
+    margin: auto;
+    align-items: center;
+    padding: 5px;
 }
 
-.shop .box-container .box .content .btn{
-    background: transparent;
+.stars::after {
+    content: "\2605 \2605 \2605 \2605 \2605";
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 65%;
+    display: block;
+    font-size: 2rem;
+    color: #dabd3b;
+    overflow: hidden;
+}
+
+.stars::before {
+    content: "\2606 \2606 \2606 \2606 \2606";
+    position: absolute;
+    left: 0;
+    top: 0;
+    font-size: 2rem;
+    color: #7e6c1f;
+}
+/*product ends */
+
+
+/* Buttons style */
+.btn {
+    background-color: #96c8cc;
+    padding: 15px 50px 15px 30px;
+    color: #141414;
+    font-weight: bold;
+    border-radius: 5px;
+    text-align: center;
+    font-size: 1.1rem;
+    position: relative;
+}
+
+.btn:active {
+    box-shadow: none;
+}
+
+.btn > .fa-angle-right {
+    font-size: 1.5rem;
+    position: absolute;
+    right: 30px;
+    top: 50%;
+    transform: translateY(-50%);
+    transition: right 0.5s;
+}
+
+.btn:hover .fa-angle-right {
+    font-size: 1.5rem;
+    position: absolute;
+    right: 20px;
+}
+
+.btn i {
+    margin: 0 5px;
+}
+
+.pop-mobiles {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+}
+
+.pop-mobiles-1 {
+    background: linear-gradient(to top, #ebebeb, #fff);
+    overflow: hidden;
+    width: 100%;
+    height: 600px;
+    margin-bottom: 30px;
+    position: relative;
+    padding: 0;
+}
+
+.pop-mobiles-1 > figure {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 49%;
+}
+
+.pop-mobiles-1 img {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    z-index: 0;
+}
+
+.pop-mobiles-1 > div {
+    position: absolute;
+    right: 10%;
+    top: 30%;
+    z-index: 10;
+    width: 40%;
+    height: 100%;
+    text-align: left;
+}
+.pop-mobiles-1 h4 {
+    color: rgb(187, 76, 76);
+    font-size: 1.2rem;
+}
+
+.pop-mobiles-1 h2 {
+    /* font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif; */
+    font-weight: 900;
+    font-size: 1.8rem;
+}
+
+.pop-mobiles-1 .btn {
+    display: inline-block;
+    margin-top: 50px;
+    margin: 50px 0;
+}
+
+.btn-newMobile {
+    background-color: white;
+    color: #49989e;
+    box-shadow: 3px 3px 5px #4e4e4e;
+    z-index: 10;
+}
+
+.pop-mobiles-2 {
+    width: 55%;
+}
+
+.pop-mobiles-2 .products {
+    grid-template-columns: repeat(3, 1fr);
+}
+
+.pop-mobiles-2 .product {
+    overflow: hidden;
+    margin-bottom: 10px;
+}
+
+.pop-mobiles-2 img {
+    width: 70%;
+    margin: auto;
+}
+
+.btn-small {
+    border: none;
+    font-size: 0.9rem;
+    width: 60%;
+    padding: 15px;
+    background-color: white;
+    box-shadow: 2px 2px 2px #49989e;
     color: black;
+    margin-bottom: 10px;
+    cursor: pointer;
 }
 
-.shop .box-container .box .content .btn:hover{
-    background: #e60000;
+.btn-small:hover {
+    background-color: #49989e;
+    color: white;
 }
 
 
@@ -532,7 +891,7 @@ span{
 }
 
 .footer .box-container .box .share a:hover{
-    color: #fff;
+    color: #e60000;
 }
 
 .footer .box-container .box p{
